--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,36 +31,26 @@
     </script>
     {% endif %}
     
-    <!-- Fetch data from iTunes if there is an itunes app id in config -->
-    {% if site.app.ios_id %}
-    <script>
-      $(function() {
-        var url = 'https://itunes.apple.com/lookup?id={{ site.app.ios_id }}&callback=?';
-        $.getJSON(url, function(res) 
-        {
-          if (res.results && res.results.length) 
-          {
+<noscript>
+  <a href="/" target="_blank">
+    <img src="//sstatic1.histats.com/0.gif?4885613&amp;101" alt="" border="0" />
+  </a>
+</noscript>
 
-            var jsonPayload = res.results[0];
-            
-            // App Icon
-            var $iconElement = $('.app-icon');
-            if ($iconElement && !$iconElement.attr('src') && jsonPayload.artworkUrl512) 
-            {
-              $iconElement.attr('src', jsonPayload.artworkUrl512);
-            }
+<script type="text/javascript">
+  var _Hasync = _Hasync || [];
+  _Hasync.push(['Histats.start', '1,4885613,4,0,0,0,00010000']);
+  _Hasync.push(['Histats.fasi', '1']);
+  _Hasync.push(['Histats.track_hits', '']);
 
-            // App Screenshot
-            var $screenshotElement = $('.app-screenshot');
-            if ($screenshotElement && !$screenshotElement.attr('src') && jsonPayload.screenshotUrls && jsonPayload.screenshotUrls.length) 
-            {
-              $screenshotElement.attr('src', jsonPayload.screenshotUrls[0]);
-            }
-          } 
-        });
-      });
-    </script>
-    {% endif %}
+  (function() {
+    var hs = document.createElement('script');
+    hs.type = 'text/javascript';
+    hs.async = true; 
+    hs.src = ('//s10.histats.com/js15_as.js');
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+  })();
+</script>
 
   </body>
 </html>
