--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <title>{{ site.title }}</title>
+  
+  {% seo %}
+  
 <meta name="google-site-verification" content="{{ site.google-site }}" />
   <link rel="shortcut icon" href="favicon.ico">
 
